--- a/week01/1a-intro-ibda.html
+++ b/week01/1a-intro-ibda.html
@@ -534,7 +534,7 @@ Beyoncé</p>
 <h2>Optional</h2>
 <p>Watch <a href="https://fivethirtyeight.com/features/how-data-nerds-found-a-131-year-old-sunken-treasure/">How Data Nerds Found A 131-Year-Old Sunken Treasure</a></p>
 
-<img src="https://www.introdata.science/img/logo.png" class="slide-logo r-stretch"><div class="footer footer-default">
+<img src="https://www.stats115.com/img/logo.png" class="slide-logo r-stretch"><div class="footer footer-default">
 <p><a href="https://stats115.com">stats115.com</a></p>
 </div>
 </section></section>
