--- a/week01/1b-bayes-events.html
+++ b/week01/1b-bayes-events.html
@@ -739,8 +739,8 @@ Data from <a href="https://gssdataexplorer.norc.org"> General Social Survey</a>
 <center>
 <div class="cell" data-layout-align="center">
 <div class="cell-output-display">
-<div class="grViz html-widget html-fill-item" id="htmlwidget-d72a40efa61d9bd44a2f" style="width:960px;height:480px;"></div>
-<script type="application/json" data-for="htmlwidget-d72a40efa61d9bd44a2f">{"x":{"diagram":"\n    digraph {\n        # graph aesthetics\n        graph [ranksep = 0.5]\n        # node definitions with substituted label text\n        1 [label = \"Prior: \n Only 40% of emails are spam.\"]\n        2 [label = \"Data: \n All caps is more common among spam.\"]\n        3 [label = \"Posterior: \n Is the email spam or not?!\"]\n        # edge definitions with the node IDs\n        1 -> 3\n        2 -> 3\n    }\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<div class="grViz html-widget html-fill-item" id="htmlwidget-7a2e0c72aa86593928aa" style="width:960px;height:480px;"></div>
+<script type="application/json" data-for="htmlwidget-7a2e0c72aa86593928aa">{"x":{"diagram":"\n    digraph {\n        # graph aesthetics\n        graph [ranksep = 0.5]\n        # node definitions with substituted label text\n        1 [label = \"Prior: \n Only 40% of emails are spam.\"]\n        2 [label = \"Data: \n All caps is more common among spam.\"]\n        3 [label = \"Posterior: \n Is the email spam or not?!\"]\n        # edge definitions with the node IDs\n        1 -> 3\n        2 -> 3\n    }\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 </center>
@@ -901,7 +901,7 @@ Data from <a href="https://gssdataexplorer.norc.org"> General Social Survey</a>
 </div>
 <div class="fragment">
 <p><span class="math display">\[\text{posterior} = \frac{\text{prior}\cdot\text{likelihood}}{\text{normalizing constant}}\]</span></p>
-<p><img src="https://www.introdata.science/img/logo.png" class="slide-logo"></p>
+<p><img src="https://www.stats115.com/img/logo.png" class="slide-logo"></p>
 <div class="footer footer-default">
 <p><a href="https://stats115.com">stats115.com</a></p>
 </div>
