--- a/week03/3a-beta-binomial.html
+++ b/week03/3a-beta-binomial.html
@@ -454,7 +454,11 @@ Dr.&nbsp;Mine Dogucu
 <section id="beta-prior-model" class="slide level2">
 <h2>Beta Prior model</h2>
 <p>Let <span class="math inline">\(\pi\)</span> be a random variable which can take any value between 0 and 1, ie. <span class="math inline">\(\pi \in [0,1]\)</span>. Then the variability in <span class="math inline">\(\pi\)</span> might be well modeled by a Beta model with <strong>shape parameters</strong> <span class="math inline">\(\alpha &gt; 0\)</span> and <span class="math inline">\(\beta &gt; 0\)</span>:</p>
-<p><span class="math display">\[\pi \sim \text{Beta}(\alpha, \beta)\]</span> The Beta model is specified by continuous pdf <span class="math display">\[\begin{equation}
+<p><span class="math display">\[\pi \sim \text{Beta}(\alpha, \beta)\]</span></p>
+</section>
+<section id="section-1" class="slide level2">
+<h2></h2>
+<p>The Beta model is specified by continuous pdf <span class="math display">\[\begin{equation}
 f(\pi) = \frac{\Gamma(\alpha + \beta)}{\Gamma(\alpha)\Gamma(\beta)} \pi^{\alpha-1} (1-\pi)^{\beta-1} \;\; \text{ for } \pi \in [0,1]
 \end{equation}\]</span> where <span class="math inline">\(\Gamma(z) = \int_0^\infty y^{z-1}e^{-y}dy\)</span> and <span class="math inline">\(\Gamma(z + 1) = z \Gamma(z)\)</span>. Fun fact: when <span class="math inline">\(z\)</span> is a positive integer, then <span class="math inline">\(\Gamma(z)\)</span> simplifies to <span class="math inline">\(\Gamma(z) = (z-1)!\)</span>.</p>
 </section>
