move figures to middle

--- a/week03/3disc-racer-game.html
+++ b/week03/3disc-racer-game.html
@@ -334,7 +334,7 @@
 
   <p class="date">2024-01-24</p>
 </section>
-<section id="section" class="title-slide slide level1 center" data-background-image="slides-figures/start_line.jpg" data-background-position="right" data-background-size="contain">
+<section id="section" class="title-slide slide level1 center" data-background-image="slides-figures/start_line.jpg" data-background-position="middle" data-background-size="contain">
 <h1></h1>
 
 </section>
@@ -421,7 +421,7 @@
 <p>[thoughts: only up to 5 observations per team]</p>
 </div>
 </section></section>
-<section id="section-1" class="title-slide slide level1 center" data-background-image="slides-figures/finish_line.jpg" data-background-position="right" data-background-size="contain">
+<section id="section-1" class="title-slide slide level1 center" data-background-image="slides-figures/finish_line.jpg" data-background-position="middle" data-background-size="contain">
 <h1></h1>
 <div class="footer footer-default">
 
